--- a/package.json
+++ b/package.json
@@ -41,15 +41,15 @@
     "@hashicorp/react-vertical-text-block-list": "^7.0.0",
     "@reach/dialog": "^0.16.2",
     "babel-plugin-import-glob-array": "0.2.0",
-    "next": "^12.1.0",
+    "framer-motion": "^5.5.5",
+    "next": "^12.1.2",
     "next-mdx-remote": "^3.0.5",
     "next-remote-watch": "1.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "semver": "^7.3.5",
-    "framer-motion": "^5.5.5",
     "react-datocms": "^1.6.6",
-    "react-player": "^2.9.0"
+    "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
+    "semver": "^7.3.5"
   },
   "devDependencies": {
     "@hashicorp/platform-cli": "^2.0.0",
