feat: `cdktf` uses remote content (#2209)
* serve cdk docs from the API

* adds deploy preview build script

* rename env var

* fix isDirectory filter

* flip config logic

* keep home directory

* adjust remark plugin

* adjust where we drop node_modules

* use cp

* no remark plugin

* add postbuild

* no outputfiletracing

* go back to node_modules in cache

* don't move node_modules

* turn back on file tracing

* Adjust node_modules placement for caching

* chore: next.config.js

* chore Dockerfile for arm64

* remove submodule/symlink

* chore make file

* bump docs page

* githubFileUrl

* handle assets

* pass params to remarkPlugins

* remove comments

* bump docs page

* bump docs page

* undo makefile

* githubFileUrl

* clean up next.config.js and comments

* Update package.json

Co-authored-by: Bryce Kalow <bkalow@hashicorp.com>

* handle breaking docs page API

Co-authored-by: Bryce Kalow <bkalow@hashicorp.com>

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@hashicorp/react-code-block": "^4.4.0",
     "@hashicorp/react-command-line-terminal": "^2.0.4",
     "@hashicorp/react-consent-manager": "^7.1.0",
-    "@hashicorp/react-docs-page": "^14.13.0",
+    "@hashicorp/react-docs-page": "^14.15.0",
     "@hashicorp/react-hashi-stack-menu": "^2.1.2",
     "@hashicorp/react-head": "^3.1.2",
     "@hashicorp/react-hero": "8.0.3",
@@ -66,6 +66,7 @@
   "main": "index.js",
   "scripts": {
     "build": "next build",
+    "build:deploy-preview": "npx ts-node --transpile-only ./scripts/content-repo-preview/build.ts",
     "update-submodules": "git submodule update --init --recursive",
     "cypress": "cypress open",
     "format": "next-hashicorp format",
