--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "generate:component": "next-hashicorp generate component",
     "generate:readme": "next-hashicorp markdown-blocks README.md",
     "lint": "next-hashicorp lint",
-    "start": "next-remote-watch './content/**/*.mdx'",
+    "start": "next dev",
     "static": "npm run build && npm run export",
     "linkcheck": "linkcheck <website url>"
   }
