--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@hashicorp/react-code-block": "^4.4.0",
     "@hashicorp/react-command-line-terminal": "^2.0.4",
     "@hashicorp/react-consent-manager": "^7.1.0",
-    "@hashicorp/react-docs-page": "^16.0.1-canary-20220427142747",
+    "@hashicorp/react-docs-page": "^16.0.0",
     "@hashicorp/react-hashi-stack-menu": "^2.1.2",
     "@hashicorp/react-head": "^3.1.2",
     "@hashicorp/react-hero": "8.0.3",
@@ -67,7 +67,7 @@
     "remark-gfm": "^3.0.1",
     "remark-mdx": "^1.6.22",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
+    "typescript": "^4.5.5",
     "unist-util-visit": "^2.0.3"
   },
   "main": "index.js",
