chore: test react-docs-page patch

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@hashicorp/react-code-block": "^4.4.0",
     "@hashicorp/react-command-line-terminal": "^2.0.4",
     "@hashicorp/react-consent-manager": "^7.1.0",
-    "@hashicorp/react-docs-page": "^17.0.1",
+    "@hashicorp/react-docs-page": "^17.1.1-canary-20220705154019",
     "@hashicorp/react-hashi-stack-menu": "^2.1.2",
     "@hashicorp/react-head": "^3.1.2",
     "@hashicorp/react-hero": "8.0.3",
@@ -39,7 +39,6 @@
     "@hashicorp/react-text-split-with-code": "^3.4.0",
     "@hashicorp/react-text-split-with-image": "^4.3.0",
     "@hashicorp/react-vertical-text-block-list": "^7.0.0",
-    "@hashicorp/remark-plugins": "^4.0.0",
     "@reach/dialog": "^0.16.2",
     "babel-plugin-import-glob-array": "0.2.0",
     "framer-motion": "^5.5.5",
