implement middleware and consent manager update

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hashicorp/nextjs-scripts": "^19.0.3",
     "@hashicorp/platform-analytics": "^0.2.0",
     "@hashicorp/platform-code-highlighting": "^0.1.2",
+    "@hashicorp/platform-edge-utils": "^0.1.1",
     "@hashicorp/platform-runtime-error-monitoring": "^0.1.0",
     "@hashicorp/platform-util": "^0.1.0",
     "@hashicorp/react-accordion": "^3.0.1",
@@ -23,7 +24,7 @@
     "@hashicorp/react-call-to-action": "^4.1.1",
     "@hashicorp/react-code-block": "^4.4.0",
     "@hashicorp/react-command-line-terminal": "^2.0.4",
-    "@hashicorp/react-consent-manager": "^7.1.0",
+    "@hashicorp/react-consent-manager": "^8.0.1",
     "@hashicorp/react-docs-page": "^17.5.0",
     "@hashicorp/react-hashi-stack-menu": "^2.1.2",
     "@hashicorp/react-head": "^3.1.2",
@@ -42,7 +43,7 @@
     "@reach/dialog": "^0.16.2",
     "babel-plugin-import-glob-array": "0.2.0",
     "framer-motion": "^5.5.5",
-    "next": "^12.1.2",
+    "next": "12.1.6",
     "next-mdx-remote": "^3.0.5",
     "next-remote-watch": "1.0.0",
     "react": "^17.0.2",
