--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@hashicorp/mktg-assets": "^2.0.0-alpha.0",
     "@hashicorp/mktg-global-styles": "4.0.0",
     "@hashicorp/mktg-logos": "^1.2.0",
-    "@hashicorp/nextjs-scripts": "^19.0.3",
-    "@hashicorp/platform-analytics": "^0.6.1",
+    "@hashicorp/platform-analytics": "^0.8.0",
+    "@hashicorp/platform-cms": "^0.3.0",
     "@hashicorp/platform-code-highlighting": "^0.1.2",
     "@hashicorp/platform-edge-utils": "^0.1.1",
     "@hashicorp/platform-runtime-error-monitoring": "^0.1.0",
@@ -23,7 +23,7 @@
     "@hashicorp/react-alert-banner": "7.0.1",
     "@hashicorp/react-button": "^6.0.3",
     "@hashicorp/react-call-to-action": "^4.1.1",
-    "@hashicorp/react-code-block": "^4.4.0",
+    "@hashicorp/react-code-block": "^6.2.0",
     "@hashicorp/react-command-line-terminal": "^2.0.4",
     "@hashicorp/react-consent-manager": "^8.0.1",
     "@hashicorp/react-docs-page": "^17.7.1",
@@ -41,21 +41,22 @@
     "@hashicorp/react-text-split-with-code": "^3.4.0",
     "@hashicorp/react-text-split-with-image": "^4.3.0",
     "@hashicorp/react-vertical-text-block-list": "^7.0.0",
-    "@reach/dialog": "^0.16.2",
+    "@reach/dialog": "^0.17.0",
+    "@reach/visually-hidden": "^0.17.0",
     "babel-plugin-import-glob-array": "0.2.0",
     "framer-motion": "^5.5.5",
-    "next": "12.1.6",
+    "next": "^12.3.1",
     "next-mdx-remote": "^3.0.5",
     "next-remote-watch": "1.0.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-datocms": "^1.6.6",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-player": "^2.9.0",
     "semver": "^7.3.5"
   },
   "devDependencies": {
     "@hashicorp/platform-cli": "^2.0.0",
-    "@hashicorp/platform-nextjs-plugin": "^2.0.0",
+    "@hashicorp/platform-nextjs-plugin": "^3.1.0",
     "@hashicorp/platform-postcss-config": "^0.1.0",
     "@hashicorp/platform-types": "^0.1.1",
     "@mdx-js/mdx": "^1.6.22",
@@ -64,6 +65,10 @@
     "@types/react": "^17.0.31",
     "cypress": "^8.6.0",
     "htmltojsx": "^0.3.0",
+    "postcss": "^8.4.5",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "2.4.1",
     "remark": "^14.0.1",
     "remark-gfm": "^3.0.1",
@@ -71,6 +76,10 @@
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5",
     "unist-util-visit": "^2.0.3"
+  },
+  "overrides": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "main": "index.js",
   "scripts": {
