--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@hashicorp/platform-postcss-config": "^0.1.0",
     "@hashicorp/platform-types": "^0.1.1",
     "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@percy/cypress": "^3.1.1",
     "@types/glob": "^7.2.0",
     "@types/react": "^17.0.31",
