--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@hashicorp/react-vertical-text-block-list": "^7.0.1",
     "@reach/dialog": "^0.18.0",
     "@reach/visually-hidden": "^0.18.0",
-    "framer-motion": "^10.0.1",
+    "framer-motion": "^7.10.3",
     "next": "^13.2.3",
     "react": "^18.2.0",
     "react-datocms": "^4.0.9",
@@ -55,12 +55,14 @@
   },
   "devDependencies": {
     "@hashicorp/platform-cli": "^2.6.0",
+    "@hashicorp/platform-configs": "^0.2.0",
     "@hashicorp/platform-nextjs-plugin": "^4.2.0",
     "@hashicorp/platform-postcss-config": "^0.2.0",
     "@hashicorp/platform-types": "^0.3.0",
     "@percy/cypress": "^3.1.2",
     "@types/glob": "^8.1.0",
-    "@types/react": "^18.0.28",
+    "@types/react": "^17.0.53",
+    "@types/react-dom": "^17.0.19",
     "cypress": "^8.6.0",
     "postcss": "^8.4.21",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -71,7 +73,7 @@
     "remark-gfm": "^3.0.1",
     "remark-mdx": "^1.6.22",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
+    "typescript": "^4.6.2",
     "unist-util-visit": "^2.0.3"
   },
   "overrides": {
