--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@hashicorp/react-section-header": "^5.0.4",
     "@hashicorp/react-standalone-link": "^0.4.0",
     "@hashicorp/react-stepped-feature-list": "^4.0.4",
-    "@hashicorp/react-subnav": "^9.5.2-canary-20230308222656",
+    "@hashicorp/react-subnav": "^9.5.2",
     "@hashicorp/react-text-split": "^5.0.0",
     "@hashicorp/react-text-split-with-code": "^3.4.3",
     "@hashicorp/react-text-split-with-image": "^4.3.1",
