feat(CRO): Implement homepage CTA copy test #3 (#2471)
* fix merge conflict

* get basic client side w/ context working

* try to add analytics event

* cleanup from other middleware based approach

* add loading implementation to avoid layout thrash

* move to min width approach

* install @hashicorp/react-standalone-link

* fix images

* implements result track calls

* import React

* fix casing

* fix button theme

* convert to min width approach

* simplify setup

* bump to latest subnav

* remove index

---------

Co-authored-by: Alex Carpenter <im.alexcarpenter@gmail.com>

--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "@hashicorp/react-link-wrap": "^3.1.0",
     "@hashicorp/react-product-downloads-page": "^2.9.0",
     "@hashicorp/react-section-header": "^5.0.4",
+    "@hashicorp/react-standalone-link": "^0.4.0",
     "@hashicorp/react-stepped-feature-list": "^4.0.4",
-    "@hashicorp/react-subnav": "^9.5.1",
+    "@hashicorp/react-subnav": "^9.5.2",
     "@hashicorp/react-text-split": "^5.0.0",
     "@hashicorp/react-text-split-with-code": "^3.4.3",
     "@hashicorp/react-text-split-with-image": "^4.3.1",
