--- a/.github/workflows/sync-staging-branch.yml
+++ b/.github/workflows/sync-staging-branch.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎
-        uses: actions/checkout@v2
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
 
       - name: Merge `master` branch
-        uses: everlytic/branch-merge@1.1.2
+        uses: everlytic/branch-merge@1.1.2 # TSCCR: tsccr: could not find entry for everlytic/branch-merge
         id: branch-merge
         with:
           github_token: ${{  secrets.GITHUB_TOKEN }}
