--- a/package.json
+++ b/package.json
@@ -9,74 +9,72 @@
   },
   "dependencies": {
     "@happykit/flags": "^3.0.0",
-    "@hashicorp/design-system-tokens": "^1.0.0",
-    "@hashicorp/flight-icons": "^2.0.1",
+    "@hashicorp/design-system-tokens": "^1.4.1",
+    "@hashicorp/flight-icons": "^2.12.0",
     "@hashicorp/mktg-assets": "^2.0.0-alpha.0",
-    "@hashicorp/mktg-global-styles": "^4.3.0",
-    "@hashicorp/mktg-logos": "^1.2.0",
-    "@hashicorp/platform-analytics": "^0.8.0",
+    "@hashicorp/mktg-global-styles": "^4.5.0",
+    "@hashicorp/mktg-logos": "^1.3.5",
+    "@hashicorp/platform-analytics": "^0.11.0",
     "@hashicorp/platform-cms": "^0.3.0",
     "@hashicorp/platform-code-highlighting": "^0.1.2",
     "@hashicorp/platform-edge-utils": "^0.1.1",
     "@hashicorp/platform-runtime-error-monitoring": "^0.1.0",
-    "@hashicorp/platform-util": "^0.1.0",
-    "@hashicorp/react-accordion": "^3.0.1",
-    "@hashicorp/react-alert-banner": "7.0.1",
-    "@hashicorp/react-button": "^6.0.3",
-    "@hashicorp/react-call-to-action": "^4.1.1",
-    "@hashicorp/react-code-block": "^6.2.0",
-    "@hashicorp/react-command-line-terminal": "^2.0.4",
-    "@hashicorp/react-consent-manager": "^8.0.1",
+    "@hashicorp/platform-util": "^0.2.0",
+    "@hashicorp/react-accordion": "^3.0.2",
+    "@hashicorp/react-alert-banner": "7.0.3",
+    "@hashicorp/react-button": "^6.3.0",
+    "@hashicorp/react-call-to-action": "^5.2.0",
+    "@hashicorp/react-code-block": "^6.2.2",
+    "@hashicorp/react-command-line-terminal": "^3.0.0",
+    "@hashicorp/react-consent-manager": "^9.0.0",
     "@hashicorp/react-docs-page": "^17.7.1",
-    "@hashicorp/react-hashi-stack-menu": "^2.1.2",
-    "@hashicorp/react-head": "^3.1.2",
-    "@hashicorp/react-hero": "8.0.3",
-    "@hashicorp/react-image": "^4.0.2",
-    "@hashicorp/react-inline-svg": "^6.0.3",
-    "@hashicorp/react-link-wrap": "^3.0.3",
+    "@hashicorp/react-hashi-stack-menu": "^3.0.0",
+    "@hashicorp/react-head": "^3.3.2",
+    "@hashicorp/react-hero": "8.0.4",
+    "@hashicorp/react-image": "^4.0.4",
+    "@hashicorp/react-inline-svg": "^6.1.0",
+    "@hashicorp/react-intro": "^0.7.1",
+    "@hashicorp/react-link-wrap": "^3.1.0",
     "@hashicorp/react-product-downloads-page": "^2.9.0",
     "@hashicorp/react-section-header": "^5.0.4",
-    "@hashicorp/react-stepped-feature-list": "^4.0.3",
-    "@hashicorp/react-subnav": "^9.3.4",
-    "@hashicorp/react-text-split": "^4.0.0",
-    "@hashicorp/react-text-split-with-code": "^3.4.0",
-    "@hashicorp/react-text-split-with-image": "^4.3.0",
-    "@hashicorp/react-vertical-text-block-list": "^7.0.0",
-    "@reach/dialog": "^0.17.0",
-    "@reach/visually-hidden": "^0.17.0",
-    "babel-plugin-import-glob-array": "0.2.0",
-    "framer-motion": "^5.5.5",
-    "next": "^12.3.1",
-    "next-mdx-remote": "^3.0.5",
-    "next-remote-watch": "1.0.0",
+    "@hashicorp/react-standalone-link": "^0.4.0",
+    "@hashicorp/react-stepped-feature-list": "^4.0.4",
+    "@hashicorp/react-subnav": "^9.5.2",
+    "@hashicorp/react-text-split": "^5.0.0",
+    "@hashicorp/react-text-split-with-code": "^3.4.3",
+    "@hashicorp/react-text-split-with-image": "^4.3.1",
+    "@hashicorp/react-vertical-text-block-list": "^7.0.1",
+    "@reach/dialog": "^0.18.0",
+    "@reach/visually-hidden": "^0.18.0",
+    "framer-motion": "^7.10.3",
+    "next": "^13.2.3",
     "react": "^18.2.0",
-    "react-datocms": "^1.6.6",
+    "react-datocms": "^4.0.9",
     "react-dom": "^18.2.0",
-    "react-player": "^2.9.0",
-    "semver": "^7.3.5"
+    "react-player": "^2.11.2",
+    "semver": "^7.3.8"
   },
   "devDependencies": {
-    "@hashicorp/platform-cli": "^2.0.0",
-    "@hashicorp/platform-nextjs-plugin": "^3.1.0",
-    "@hashicorp/platform-postcss-config": "^0.1.0",
-    "@hashicorp/platform-types": "^0.1.1",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@percy/cypress": "^3.1.1",
-    "@types/glob": "^7.2.0",
-    "@types/react": "^17.0.31",
+    "@hashicorp/platform-cli": "^2.6.0",
+    "@hashicorp/platform-configs": "^0.2.0",
+    "@hashicorp/platform-nextjs-plugin": "^4.2.0",
+    "@hashicorp/platform-postcss-config": "^0.2.0",
+    "@hashicorp/platform-types": "^0.3.0",
+    "@percy/cypress": "^3.1.2",
+    "@types/glob": "^8.1.0",
+    "@types/react": "^17.0.53",
+    "@types/react-dom": "^17.0.19",
     "cypress": "^8.6.0",
-    "htmltojsx": "^0.3.0",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.21",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "2.4.1",
+    "postcss-preset-env": "^7.8.3",
+    "prettier": "2.8.4",
     "remark": "^14.0.1",
     "remark-gfm": "^3.0.1",
     "remark-mdx": "^1.6.22",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.6.2",
     "unist-util-visit": "^2.0.3"
   },
   "overrides": {
